@@ -12,19 +12,21 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.2</junit.version>
+        <javafx.version>17.0.6</javafx.version>
+        <java.version>17</java.version>
     </properties>
 
-    <dependencies>
 
+    <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>17.0.6</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>17.0.6</version>
+            <version>${javafx.version}</version>
         </dependency>
 
         <dependency>
@@ -45,8 +47,6 @@
             <artifactId>jfoenix</artifactId>
             <version>9.0.10</version>
         </dependency>
-
-
     </dependencies>
 
     <build>
@@ -56,8 +56,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>23</source>
-                    <target>23</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -75,6 +75,17 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <jvmArguments>
+                                --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
+                                --add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix
+                                --add-exports javafx.base/com.sun.javafx.binding=com.jfoenix
+                                --add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix
+                                --add-exports javafx.base/com.sun.javafx.event=com.jfoenix
+                                --add-opens javafx.controls/javafx.scene.control=com.jfoenix
+                                --add-opens javafx.base/javafx.beans.value=com.jfoenix
+                                --add-opens java.base/java.lang.reflect=com.jfoenix
+                                --add-opens javafx.graphics/javafx.scene=com.jfoenix
+                            </jvmArguments>
                         </configuration>
                     </execution>
                 </executions>
@@ -82,4 +93,3 @@
         </plugins>
     </build>
 </project>
-
